--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,11 @@
 // app global css in SCSS form
+
+:root {
+  --primary: #1976D2;
+}
+
+.q-table__top,
+thead tr:first-child th {
+  background-color: var(--primary);
+  color: white;
+}
